[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Label.gd" type="Script" id=1]
[ext_resource path="res://scenes/End.gd" type="Script" id=2]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="End" type="Control"]
margin_right = 1022.0
margin_bottom = 597.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 1 )
text = "¡Felicitaciones!!!!
Acertaste 5 de 5"
align = 1
valign = 1
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 2 )
text = "¡Completaste el ejercicio!!
Acertaste 4 de 5"
align = 1
valign = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 3 )
text = "¡Completaste el ejercicio!!
Acertaste 3 de 5"
align = 1
valign = 1
autowrap = true

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 4 )
text = "¡Completaste el ejercicio!!
Acertaste 2 de 5"
align = 1
valign = 1
autowrap = true

[node name="Label5" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 5 )
text = "¡Completaste el ejercicio!!
Acertaste 1 de 5"
align = 1
valign = 1
autowrap = true

[node name="Label6" type="Label" parent="."]
visible = false
margin_left = 446.496
margin_top = 197.777
margin_right = 627.496
margin_bottom = 322.777
custom_fonts/font = SubResource( 6 )
text = "¡Completaste el ejercicio!!
No obtuviste aciertos"
align = 1
valign = 1
autowrap = true
